dando continuidade aos estudos de estrutura de dados com java